# high-performance-comptuing-lab

./: .clang-format  .gitignore  .gitpod.yml  Cargo.toml  Makefile  flake.nix  report1.adoc  report2.adoc  report3.adoc  report4.adoc
.cargo/: config.toml
KickOff/: .gitignore  1_results.csv  2_500_results.csv  2_results.csv  Makefile  Makefile.bcast  README.md  batchJobs.sh  cpp11-pi.cpp  launch.sh  mpi-pi++.cpp  mpi-pi.c  openMP-pi.cpp  results.csv  results_clang.csv  results_gcc.csv  results_virgo.csv  runner.sh
MatrixMult/: .gitignore  CMatrix.cpp  CMatrix.h  Makefile  README.md  compareRayonAndOpenmp.sh  cxxopts.hpp  localBenchmark.sh  matrix_generator.cpp  matrix_openmp.cpp  matrix_openmp_inverted.cpp  matrix_openmp_transposed.cpp  matrix_sequential.cpp  results_virgo.csv  virgoBenchmark.sh
MatrixMult/rust-matrix-multiplication/: Cargo.toml
MatrixMult/rust-matrix-multiplication/src/: main.rs  matrix.rs
MatrixMult/rust-matrix-multiplication/src/matrix/: multiply.rs
Sorting/: .gitignore  Makefile  README.md  benchRadix.sh  dumbSort.cpp  gray_sort_record.h  incompleteResults.csv  newResults.csv  newResultsB.csv  oldResults.csv  results.csv  runBenchmark.sh  runTenTimes.sh  virgoBenchmark.sh  virgoSingleBenchmark.sh
Sorting/rust-sorting/: Cargo.toml
Sorting/rust-sorting/src/: entry.rs  main.rs  sorting.rs
Sorting/rust-sorting/src/sorting/: builtin_sort.rs  glidesort.rs  mpi_block_sort.rs  mpi_distributed_radix_sort.rs  mpi_distributed_radix_sort_single_thread.rs
assets/: algorithm-comparison-high-threads.vl.json  algorithm-comparison-high-threads_b.vl.json  benchmark.vl.json  compiler-comparison.vl.json  cpp-threads-virgo.vl.json  implementation-comparison-fixed-n.vl.json  implementation-comparison-fixed-threads.vl.json  lgca-core-implementation-comparison.vl.json  lgca-different-sizes-comparison.vl.json  lgca-multiple-nodes-comparison.vl.json  lgca-speedup-efficiency.vl.json  lgca-threads-vs-size-comparison.vl.json  mpi-cpp-efficiency.vl.json  mpi-cpp-speedup.vl.json  mpi-cpp-virgo.vl.json  mpi-cpp.vl.json  openmp-virgo.vl.json  original-high-threads.vl.json  results.csv  (+16 more)
lgca/: Cargo.toml  build_binaries.sh  result  results.csv  run_benchmark.sh  slurm_benchmark.sh
lgca/src/: lgca.rs  main.rs
lgca/src/lgca/: bad_and_outdated_code.rs  cell.rs  movement_and_collision.rs  new_movements.rs  visualization.rs
(+11 files in other folders)
