[package]
name = "lgca"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.17", features = ["derive"] }
mpi = { version = "0.7.0", features = ["user-operations", "derive"] }
rayon = "1.8.0"
ril = "0.10.1"
rust_mpi = "0.0.3"
