[package]
name = "rust-matrix-multiplication"
description = "Multiply two matrices in Rust with Rayon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
peg = "0.8.2"
rayon = "1.8.0"
