[package]
name = "rust-sorting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = "0.13.2"
bytes-cast = "0.3.0"
clap = { version = "4.4.7", features = ["derive"] }
glidesort = "0.1.2"
rayon = "1.8.0"
tokio = { version = "1", features = ["full"] }
