[package]
name = "rust-sorting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arr_macro = "0.2.1"
binrw = "0.13.2"
bytes-cast = "0.3.0"
clap = { version = "4.4.7", features = ["derive"] }
crumsort = "0.1.0"
futures = "0.3.29"
glidesort = "0.1.2"
itertools = "0.12.0"
mpi = { version = "0.7.0", features = ["user-operations", "derive"] }
nix = "0.27.1"
rayon = "1.8.0"
rdst = "0.20.11"
rotated-array-set = "0.1.1"
sort = "0.8.5"
tokio = { version = "1", features = ["full"] }
